css/modal-styles.css
#modal-header-container {
	position: absolute;
	top: 0;
	width: 100%;
}

#modal-header {
	position: fixed;

	/* This is a little trick to center a fixed position element on the y-axis */
	left: 50%;
	transform: translateX(-50%);

	width: 100%;
	max-width: 1074px; /* max-width just a little larger than the page so the close button leans left a bit */
}

#modal-close-button {
	cursor: pointer;

	position: fixed;
	left: 4px;
	top: 4px;

	width: 60px;
	height: 60px;
}

#modal-close-button img {
	content: url(../images/close-button.png);
	width: 100%;
	height: 100%;
}

#EOF {
	width: 100%;
	height: 180px;
}

#EOF > .image-container {
	height: 100%;

	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);

	background-image: url(../images/end-of-file.png);
	background-position: center;
	background-repeat: no-repeat;
}

#modal-scroll-gradient {
	position: fixed;

	width: 100%;
	height: 34px;

	background-color: rgb(0,0,0);
	background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%);
}

#modal-background {
	z-index: 2;

	display: none;
	position: fixed;
	left: 0;
	right: 0;
	height: 100%;
	width: 100%;
	overflow: auto;
	background-color: rgba(0, 0, 0, 0.9);
}

#modal-panel-container {
	display: flex;
	justify-content: center;
}

#modal-panel {
	margin: 16px;

	min-width: 0px; /* needed to prevent inner content from making panel larger than the window */
	max-width: 1024px;

	border-image-source: url(../images/modal-background.png);
	border-image-slice: 16 fill;
	border-image-repeat: stretch;
	border-image-width: 16px;
	border-width: 16px;
	border-style: solid;

	display: flex;
	flex-wrap: wrap;
}

#modal-panel .standalone-image {
	display: block;
	padding: 10px 0;
	width: 100%;
	left: 50%; transform:
	translateX(-50%);
	position: relative;
}

#modal-panel div:nth-last-of-type(2) {
	/* Trims the bottom padding off the last content div to avoid interference with EOF icon. */
	padding-bottom: 0px;
}

#modal-panel .paragraph-container > p:first-of-type {
	padding-top: 0px;
}

#modal-panel .paragraph-container p:last-of-type {
	padding-bottom: 0px;
}

#modal-panel p {
	color: black;
	padding-top: 8px;
	padding-bottom: 8px;
}

.container {
	position: relative;
	width: 100%;
}

.container p {
	margin: none;
	position: relative;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
}

#modal-video-container {
	width: 100%;
}

#modal-panel video {
	padding-top: 8px;
	padding-bottom: 16px;
	width: 100%;
	height: 100%;
}

.image-container {
	position: relative;
}

.image-container > img {
	display: block;
	width: 100%;
}

.img {
	font-size: 0;
}

.fade-cycle-overlay {
	position: absolute;
	right: 0;
	top: 0;

	animation-name: fade;
	animation-timing-function: ease-in-out;
	animation-iteration-count: infinite;
	animation-duration: 2s;
	animation-direction: alternate;
}

#modal-panel h1 {
	padding: 40px 0px 8px 0px;
	color: black;
	text-align: center;
	text-shadow: none;

	width: 100%;
}

.figure-container {
	padding-bottom: 8px;
	padding-top: 8px;
	margin: 0 auto;
}

.figure-separator {
	width: 100%;
	height: 20px;
}

.figure {
	border: 4px solid black;
}

#modal-panel .figure > video {
	height: 100%;
	padding: 0;

	background-color: black;
}

.figure > .label-container {
	width: 100%;

	border-top: inherit;
	border-bottom: inherit;
	border-left: 0px;
	border-right: 0px;

	border-style: inherit;
	border-color: inherit;

	background-color: black;
}

.figure > .label-container.header {
	border-top: 0px;
}

.figure > .label-container.footer {
	border-bottom: 0px;
}

.figure > .label-container > p {
	color: whitesmoke !important;
	padding: 0 !important;
	font-size: 1.25em;
}

.figure > .separator {
	background-color: inherit;
	border-top: inherit;
	border-style: inherit;
	border-color: inherit;
}

#modal-panel .figure-container .row-border {
	position: absolute;

	width: 100%;
	height: 5.882%;

	border-bottom: 2px dashed whitesmoke;
}

#modal-panel .figure-container .row-border.orange {
	top: 35.294%;
}

#modal-panel .figure-container .row-border.green {
	top: 23.529%;
}

#modal-panel .figure-container .row-border.purple {
	top: 11.765%;
}

#modal-panel .figure-container .index-label {
	position: absolute;

	height: 5.8824%;
	width: 4.166667%;

	background-color: black;
	border-style: solid;
	border-color: black;

	outline: 1px solid whitesmoke;
}

#modal-panel .figure-container .index-label.cell {
	left: -2.9412%;
}

#modal-panel .figure-container .index-label.tile {
	bottom: 2.9412%;
}

#modal-panel .figure-container .index-label > p {
	padding: 0;
	font-size: 1em;

	color: whitesmoke;
	position: absolute;

	width: 100%;
	top: 50%;
	transform: translateY(-50%);

	text-align: center;

	margin: 0;
}

#modal-panel .figure-container .index-label.cell.orange {
	top: 35.294%;
}

#modal-panel .figure-container .index-label.cell.green {
	top: 23.529%;
}

#modal-panel .figure-container .index-label.cell.purple {
	top: 11.765%;
}

#modal-panel .figure-container .index-label.tile.orange {
	left: 2.0833%;
}

#modal-panel .figure-container .index-label.tile.green {
	left: 35.4167%;
}

#modal-panel .figure-container .index-label.tile.purple {
	left: 68.75%;
}

@keyframes fade {
	0% {
		opacity: 0;
	}
	25% {
		opacity: 0;
	}
	75% {
		opacity: 1;
	}
	100% {
		opacity: 1;
	}
}

@media only screen and (min-width: 0px) and (max-width: 400px) {
	#modal-panel .figure-container .row-border {
		border-bottom-width: 1px;
	}

	#modal-panel .figure-container .index-label > p {
		font-size: 0.75em;
	}
}

@media only screen and (min-width: 0px) and (max-width: 600px) {
	#modal-panel {
		margin: 16px 0px;
	}

	#modal-close-button {
		left: -6px;
		top: -2px;
	}

	.container p,
	.figure-container {
		width: 100%;
	}

	#EOF {
		height: 100px;
	}
}

@media only screen and (min-width: 601px) { 
	.container p {
		width: 90%;
	}
	
	.figure-container {
		width: 80%;
		padding-top: 16px;
		padding-bottom: 40px;
	}

	#modal-video-container {
		width: 80%;
		margin: 0 auto;
	}

	#modal-panel video {
		padding-left: 0px;
		padding-right: 0px;
	}

	#modal-panel > .paragraph-container {
		padding: 0px;
		width: 80%;
		margin: 0 auto;
	}
}

